[gd_scene load_steps=4 format=3 uid="uid://c12u4vsw7gq25"]

[ext_resource type="Script" path="res://controllers/character/character-ui.gd" id="1_iqqcr"]
[ext_resource type="Theme" uid="uid://hve1e7mnexbi" path="res://themes/theme.tres" id="1_v4hy0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jwqaa"]
content_margin_left = 16.0
content_margin_top = 16.0
content_margin_right = 16.0
content_margin_bottom = 16.0
bg_color = Color(0.12, 0.15, 0.2, 0.9)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.25, 0.28, 0.32, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color(0, 0, 0, 0.2)
shadow_size = 6

[node name="CharacterUI" type="Window"]
title = "Character Controller"
initial_position = 2
size = Vector2i(400, 0)
min_size = Vector2i(350, 0)
exclusive = true
borderless = true
theme = ExtResource("1_v4hy0")
script = ExtResource("1_iqqcr")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_jwqaa")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HeaderLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = "_section_header"
text = "Character Controller"
horizontal_alignment = 1

[node name="ControlInstructions" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
bbcode_enabled = true
text = "[b]Controls:[/b]
• Movement: WASD keys
• Jump: Spacebar
• Run: Shift
• Release control: Backspace"
fit_content = true
autowrap_mode = 2

[node name="HSeparator" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="StatsContainer" type="GridContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="SpeedLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/StatsContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Speed:"

[node name="SpeedValue" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/StatsContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "0 m/s"

[node name="PosLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/StatsContainer"]
layout_mode = 2
text = "Position:"

[node name="PosValue" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/StatsContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0, 0, 0"
text_overrun_behavior = 3

[node name="GravLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/StatsContainer"]
layout_mode = 2
text = "Gravity:"

[node name="GravValue" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/StatsContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "1.625 m/s²"

[node name="HSeparator2" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ButtonsContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="ResetButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/ButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Reset Camera"

[node name="ReleaseControlButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/ButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Release Control"

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/ButtonsContainer/ResetButton" to="." method="_on_reset_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/ButtonsContainer/ReleaseControlButton" to="." method="_on_release_control_button_pressed"]
